# phyelds-examples

./: .gitignore  README.md  phyelds-example.ipynb  pyproject.toml
binder/: environment.yml  phyelds-example.ipynb  requirements.txt
src/: CustomDrawings.py  CustomRenderMonitor.py  VMASRenderMonitor.py  VicsekFlocking.py  channel.py  counter.py  scr.py
