[tool.poetry]
name = "Phyelds Examples"
version = "0.1.0"
description = ""
authors = ["Davide Domini <davide.domini@unibo.it>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
phyelds = "5.0.0"
imageio = "^2.37.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
